--- a/JassClient/.classpath
+++ b/JassClient/.classpath
@@ -12,5 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX14"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX 14 SKD"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
